[gd_scene load_steps=5 format=3 uid="uid://bolbou07gfpeg"]

[ext_resource type="Script" path="res://Src/lobbyMenu.gd" id="1_0v0pk"]
[ext_resource type="StyleBox" uid="uid://dvs4ap0mdc3ut" path="res://Resources/button-normal.tres" id="1_a8gao"]
[ext_resource type="StyleBox" uid="uid://b3fs8writruqt" path="res://Resources/button-hover.tres" id="2_sn1s7"]
[ext_resource type="StyleBox" uid="uid://cku7nkflrk7k4" path="res://Resources/button-pressed.tres" id="3_y826s"]

[node name="LobbyMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0v0pk")

[node name="Backgorund" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0980392, 0.0980392, 0.0980392, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.056
anchor_top = 0.099
anchor_right = 0.951
anchor_bottom = 0.901
offset_left = -0.512001
offset_top = -0.152008
offset_right = 0.447998
offset_bottom = 0.151978
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="LobbyListVBox" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/LobbyListVBox"]
layout_mode = 2

[node name="LobbyList" type="Label" parent="MarginContainer/HBoxContainer/LobbyListVBox/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 0.54902, 0.317647, 1)
text = "Lobby List"
horizontal_alignment = 1

[node name="Refresh" type="Button" parent="MarginContainer/HBoxContainer/LobbyListVBox/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_styles/normal = ExtResource("1_a8gao")
theme_override_styles/hover = ExtResource("2_sn1s7")
theme_override_styles/pressed = ExtResource("3_y826s")
text = "Refresh"

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/HBoxContainer/LobbyListVBox"]
layout_mode = 2
size_flags_vertical = 0

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/LobbyListVBox/HBoxContainer2"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 2
text = "Lobby ID"

[node name="Label2" type="Label" parent="MarginContainer/HBoxContainer/LobbyListVBox/HBoxContainer2"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 6
text = "Capacity/Players"
horizontal_alignment = 1

[node name="Label3" type="Label" parent="MarginContainer/HBoxContainer/LobbyListVBox/HBoxContainer2"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 6
text = "Status"
horizontal_alignment = 1

[node name="Label4" type="Label" parent="MarginContainer/HBoxContainer/LobbyListVBox/HBoxContainer2"]
custom_minimum_size = Vector2(70, 0)
layout_mode = 2
size_flags_horizontal = 10
text = "Action"
horizontal_alignment = 1

[node name="ColorRect" type="ColorRect" parent="MarginContainer/HBoxContainer/LobbyListVBox"]
custom_minimum_size = Vector2(0, 6)
layout_mode = 2
color = Color(1, 0.54902, 0.317647, 1)

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/HBoxContainer/LobbyListVBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/LobbyListVBox/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 4
size_flags_stretch_ratio = 0.32

[node name="ColorRect" type="ColorRect" parent="MarginContainer/HBoxContainer/VBoxContainer2/VBoxContainer2"]
custom_minimum_size = Vector2(0, 3)
layout_mode = 2
color = Color(1, 0.54902, 0.317647, 1)

[node name="UserName" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer2/VBoxContainer2"]
layout_mode = 2
text = "Username"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ColorRect2" type="ColorRect" parent="MarginContainer/HBoxContainer/VBoxContainer2/VBoxContainer2"]
custom_minimum_size = Vector2(0, 3)
layout_mode = 2
color = Color(1, 0.54902, 0.317647, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 6
size_flags_stretch_ratio = 2.86

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer2/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.54902, 0.317647, 1)
text = "Create New Lobby"
horizontal_alignment = 1

[node name="NewLobbyCapacity" type="LineEdit" parent="MarginContainer/HBoxContainer/VBoxContainer2/VBoxContainer"]
layout_mode = 2
placeholder_text = "Player Capacity"
alignment = 1

[node name="NewLobbyName" type="LineEdit" parent="MarginContainer/HBoxContainer/VBoxContainer2/VBoxContainer"]
layout_mode = 2
placeholder_text = "Lobby Name"
alignment = 1

[node name="CreateLobby" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer2/VBoxContainer"]
layout_mode = 2
theme_override_styles/normal = ExtResource("1_a8gao")
theme_override_styles/hover = ExtResource("2_sn1s7")
theme_override_styles/pressed = ExtResource("3_y826s")
text = "Create Lobby"

[node name="Return" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(100, 35)
layout_mode = 2
size_flags_vertical = 6
theme_override_styles/normal = ExtResource("1_a8gao")
theme_override_styles/hover = ExtResource("2_sn1s7")
theme_override_styles/pressed = ExtResource("3_y826s")
text = "Return"

[connection signal="pressed" from="MarginContainer/HBoxContainer/LobbyListVBox/HBoxContainer/Refresh" to="." method="_on_refresh_pressed"]
[connection signal="text_submitted" from="MarginContainer/HBoxContainer/VBoxContainer2/VBoxContainer/NewLobbyName" to="." method="_on_new_lobby_name_text_submitted"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer2/VBoxContainer/CreateLobby" to="." method="_on_create_lobby_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer2/Return" to="." method="_on_return_pressed"]
